fix header menu btn

--- a/assets/html/email-2.html
+++ b/assets/html/email-2.html
@@ -18,7 +18,7 @@
     <!-- Tell iOS not to automatically link certain text strings. -->
     <meta name="color-scheme" content="light" />
     <meta name="supported-color-schemes" content="light" />
-    <title></title>
+    <title>Password Recovery</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
@@ -178,12 +178,6 @@
           font-size: 18px;
         }
       }
-      .button-a {
-        border-width: 2px;
-        border-style: solid;
-        border-color: #ffffff;
-        transition: border 0.2s ease;
-      }
     </style>
     <!-- Progressive Enhancements : END -->
   </head>
@@ -323,7 +317,7 @@
                       width="100%"
                     >
                       <tr>
-                        <td style="padding: 0 20px">
+                        <td style="padding: 35px 20px 0">
                           <!-- Button : BEGIN -->
                           <table
                             align="center"
@@ -336,7 +330,7 @@
                             <tr>
                               <td
                                 class="button-td button-td-primary"
-                                style="padding: 35px 10px 0; text-align: center"
+                                style="border: 2px solid #ffffff; text-align: center"
                               >
                                 <a
                                   class="button-a button-a-primary"
